--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
             mediaFiles.forEach(file => {
                 const slide = document.createElement('div');
                 slide.classList.add('swiper-slide');
-
-                if (file.name.endsWith('.jpg') || file.name.endsWith('.png')) {
+            
+                if (file.name.endsWith('.jpg') || file.name.endsWith('.jpeg') || file.name.endsWith('.png')) {
                     slide.innerHTML = `<img src="${file.download_url}" alt="${file.name}">`;
                 } else if (file.name.endsWith('.mp4')) {
                     slide.innerHTML = `<video controls><source src="${file.download_url}" type="video/mp4">Seu navegador não suporta vídeos HTML5.</video>`;
                 }
-
+            
                 mediaWrapper.appendChild(slide);
-            });
+            });          
 
             // Inicializa o Swiper
             new Swiper('.swiper-container', {
