--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
     <style>
         body { font-family: Arial, sans-serif; }
         .swiper-container { width: 100%; height: 100%; }
-        .swiper-slide img, .swiper-slide video { width: 100%; height: auto; }
+        .swiper-slide {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 500px; /* Ajuste a altura conforme necessário */
+        }
+        .swiper-slide img, .swiper-slide video {
+            max-width: 100%;
+            max-height: 100%;
+            object-fit: contain; /* Faz com que a imagem ou vídeo se ajuste sem distorcer */
+        }
     </style>
 </head>
 <body>
@@ -30,15 +40,15 @@
             mediaFiles.forEach(file => {
                 const slide = document.createElement('div');
                 slide.classList.add('swiper-slide');
-            
+
                 if (file.name.endsWith('.jpg') || file.name.endsWith('.jpeg') || file.name.endsWith('.png')) {
                     slide.innerHTML = `<img src="${file.download_url}" alt="${file.name}">`;
                 } else if (file.name.endsWith('.mp4')) {
                     slide.innerHTML = `<video controls><source src="${file.download_url}" type="video/mp4">Seu navegador não suporta vídeos HTML5.</video>`;
                 }
-            
+
                 mediaWrapper.appendChild(slide);
-            });          
+            });
 
             // Inicializa o Swiper
             new Swiper('.swiper-container', {
