--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <style>
         body { font-family: Arial, sans-serif; }
-        .swiper-container { width: 100%; height: 100%; }
+        .swiper-container { width: 100%; height: auto; }
         .swiper-slide {
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 500px; /* Ajuste a altura conforme necessário */
+            height: 300px; /* Ajuste a altura conforme necessário */
         }
         .swiper-slide img, .swiper-slide video {
-            max-width: 100%;
-            max-height: 100%;
+            max-width: 80%; /* Ajuste conforme necessário */
+            max-height: 80%; /* Ajuste conforme necessário */
             object-fit: contain; /* Faz com que a imagem ou vídeo se ajuste sem distorcer */
         }
     </style>
