Estiliziação dos vídeos para serem executados

--- a/index.html
+++ b/index.html
@@ -65,9 +65,11 @@
                 if (file.name.endsWith('.jpg') || file.name.endsWith('.jpeg') || file.name.endsWith('.png')) {
                     slide.innerHTML = `<img src="${file.download_url}" alt="${file.name}">`;
                 } else if (file.name.endsWith('.mp4')) {
-                    slide.innerHTML = `<video controls><source src="${file.download_url}" type="video/mp4">Seu navegador não suporta vídeos HTML5.</video>`;
+                    slide.innerHTML = `<video controls autoplay muted loop>
+                        <source src="${file.download_url}" type="video/mp4">
+                        Seu navegador não suporta vídeos HTML5.
+                    </video>`;
                 }
-
                 mediaWrapper.appendChild(slide);
             });
 
