--- a/index.html
+++ b/index.html
@@ -8,26 +8,24 @@
     <style>
         body { font-family: Arial, sans-serif; }
         .swiper-container {
-            width: 100%; /* Largura total do contêiner */
-            height: auto; /* Altura automática para caber no conteúdo */
+            width: 100%;
+            height: 100vh; /* Ajuste a altura para ocupar a tela inteira */
         }
         .swiper-slide {
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 50vh; /* Usa 50% da altura da viewport */
+            height: 100%; /* Ajusta a altura para ocupar todo o espaço disponível */
         }
-        .swiper-slide img {
-            max-width: 100%; /* Permite que ocupem a largura total do contêiner */
-            max-height: 100%; /* Limita a altura ao tamanho do contêiner */
-            width: auto; /* Ajusta a largura automaticamente */
-            height: auto; /* Ajusta a altura automaticamente */
-        }
+        .swiper-slide img,
         .swiper-slide video {
-            max-width: 100%; /* Permite que ocupem a largura total do contêiner */
-            max-height: 100%; /* Limita a altura ao tamanho do contêiner */
-            width: auto; /* Ajusta a largura automaticamente */
-            height: auto; /* Ajusta a altura automaticamente */
+            max-width: 100%;
+            max-height: 100%;
+            width: auto;
+            height: auto;
+        }
+        video {
+            display: block; /* Para garantir que o vídeo ocupe o espaço */
         }
     </style>
 </head>
@@ -45,7 +43,7 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
     <script>
         const swiper = new Swiper('.swiper-container', {
-            autoplay: false, // Desativa o autoplay
+            autoplay: false, // Desativa o autoplay automático para controlar manualmente
             pagination: {
                 el: '.swiper-pagination',
                 clickable: true,
@@ -65,7 +63,7 @@
                 slide.classList.add('swiper-slide');
 
                 if (file.name.endsWith('.mp4')) {
-                    slide.innerHTML = `<video controls>
+                    slide.innerHTML = `<video autoplay loop muted>
                                            <source src="${file.download_url}" type="video/mp4">
                                            Seu navegador não suporta vídeos HTML5.
                                        </video>`;
@@ -78,6 +76,7 @@
                 // Adiciona o listener para o evento 'ended' nos vídeos
                 if (file.name.endsWith('.mp4')) {
                     const video = slide.querySelector('video');
+                    video.removeAttribute('muted'); // Permite som no vídeo
                     video.addEventListener('ended', () => {
                         swiper.slideNext(); // Avança para o próximo slide quando o vídeo termina
                     });
