--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Carrossel de Imagens e Vídeos</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css">
     <style>
-        body { font-family: Arial, sans-serif; }
+        body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
         .swiper-container {
             width: 100%;
             height: 100vh; /* Ajuste a altura para ocupar a tela inteira */
@@ -16,16 +16,34 @@
             justify-content: center;
             align-items: center;
             height: 100%; /* Ajusta a altura para ocupar todo o espaço disponível */
+            transition: transform 0.5s ease; /* Efeito de transição nas fotos */
         }
-        .swiper-slide img,
-        .swiper-slide video {
+        .swiper-slide img {
             max-width: 100%;
             max-height: 100%;
             width: auto;
             height: auto;
+            transition: transform 1.5s ease; /* Efeito de transição suave nas imagens */
         }
-        video {
-            display: block; /* Para garantir que o vídeo ocupe o espaço */
+        .swiper-slide img:hover {
+            transform: scale(1.1); /* Zoom suave quando o mouse passa sobre a imagem */
+        }
+        /* Estilos para sobrepor o vídeo ao carrossel */
+        #video-overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.8);
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+        }
+        #video-overlay video {
+            max-width: 80%;
+            max-height: 80%;
         }
     </style>
 </head>
@@ -40,12 +58,17 @@
         <div class="swiper-button-prev"></div>
     </div>
 
+    <!-- Overlay para exibir vídeo em tela cheia -->
+    <div id="video-overlay">
+        <video controls></video>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
     <script>
         const swiper = new Swiper('.swiper-container', {
             autoplay: {
-                delay: 5000, // Tempo em milissegundos para cada slide
-                disableOnInteraction: false, // Permite que o autoplay continue após interação
+                delay: 5000, // Tempo para as imagens
+                disableOnInteraction: false,
             },
             pagination: {
                 el: '.swiper-pagination',
@@ -57,6 +80,9 @@
             },
         });
 
+        const videoOverlay = document.getElementById('video-overlay');
+        const videoElement = videoOverlay.querySelector('video');
+
         const loadContent = async () => {
             const response = await fetch('https://api.github.com/repos/tuesbela/imagenstv/contents/midia?ref=main');
             const files = await response.json();
@@ -66,38 +92,39 @@
                 slide.classList.add('swiper-slide');
 
                 if (file.name.endsWith('.mp4')) {
-                    slide.innerHTML = `<video autoplay muted>
-                                           <source src="${file.download_url}" type="video/mp4">
-                                           Seu navegador não suporta vídeos HTML5.
-                                       </video>`;
+                    // Adiciona vídeo, mas o vídeo só será exibido na overlay
+                    slide.innerHTML = `<img src="https://dummyimage.com/600x400/000/fff&text=Vídeo">`;
+                    slide.setAttribute('data-video-url', file.download_url);
                 } else {
                     slide.innerHTML = `<img src="${file.download_url}" alt="${file.name}">`;
                 }
 
                 swiper.appendSlide(slide);
-
-                // Adiciona o listener para o evento 'ended' nos vídeos
-                if (file.name.endsWith('.mp4')) {
-                    const video = slide.querySelector('video');
-                    video.removeAttribute('muted'); // Permite som no vídeo
-                    video.addEventListener('ended', () => {
-                        swiper.slideNext(); // Avança para o próximo slide quando o vídeo termina
-                        swiper.autoplay.start(); // Reinicia o autoplay após o vídeo
-                    });
-                }
             });
 
-            // Inicia o primeiro vídeo ou imagem
+            // Evento de mudança de slide
             swiper.on('slideChange', () => {
                 const currentSlide = swiper.slides[swiper.activeIndex];
-                const video = currentSlide.querySelector('video');
-                if (video) {
-                    swiper.autoplay.stop(); // Para o autoplay ao iniciar um vídeo
-                    video.play(); // Reproduz o vídeo quando o slide muda
-                } else {
-                    swiper.autoplay.start(); // Reinicia o autoplay para imagens
+                const videoUrl = currentSlide.getAttribute('data-video-url');
+
+                if (videoUrl) {
+                    // Pausa o autoplay e exibe o vídeo em tela cheia
+                    swiper.autoplay.stop();
+                    showVideo(videoUrl);
                 }
             });
+        };
+
+        const showVideo = (videoUrl) => {
+            videoElement.src = videoUrl;
+            videoOverlay.style.display = 'flex'; // Exibe o overlay com o vídeo
+            videoElement.play();
+
+            // Evento de quando o vídeo termina
+            videoElement.onended = () => {
+                videoOverlay.style.display = 'none'; // Esconde o overlay
+                swiper.autoplay.start(); // Retoma o autoplay do carrossel
+            };
         };
 
         loadContent();
