--- a/index.html
+++ b/index.html
@@ -6,29 +6,32 @@
     <title>Carrossel de Imagens e Vídeos</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css">
     <style>
-        body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
+        body { font-family: Arial, sans-serif; margin: 0; padding: 0; overflow: hidden; }
         .swiper-container {
             width: 100%;
-            height: 100vh; /* Ajuste a altura para ocupar a tela inteira */
+            height: 100vh; /* Ocupa a tela inteira */
         }
         .swiper-slide {
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100%; /* Ajusta a altura para ocupar todo o espaço disponível */
-            transition: transform 0.5s ease; /* Efeito de transição nas fotos */
+            transition: transform 0.5s ease;
         }
         .swiper-slide img {
             max-width: 100%;
             max-height: 100%;
             width: auto;
             height: auto;
-            transition: transform 1.5s ease; /* Efeito de transição suave nas imagens */
+            animation: zoomEffect 8s ease infinite; /* Zoom automático */
         }
-        .swiper-slide img:hover {
-            transform: scale(1.1); /* Zoom suave quando o mouse passa sobre a imagem */
+        /* Animação de zoom */
+        @keyframes zoomEffect {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.1); } /* Zoom suave */
+            100% { transform: scale(1); }
         }
-        /* Estilos para sobrepor o vídeo ao carrossel */
+        /* Estilos para sobrepor o vídeo ao carrossel em tela cheia */
         #video-overlay {
             display: none;
             position: fixed;
@@ -36,14 +39,15 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.8);
+            background-color: rgba(0, 0, 0, 0.9); /* Fundo preto semi-transparente */
             justify-content: center;
             align-items: center;
             z-index: 1000;
         }
         #video-overlay video {
-            max-width: 80%;
-            max-height: 80%;
+            width: 100%; /* Vídeo em tela cheia */
+            height: 100%;
+            object-fit: cover; /* Cobre a tela completamente */
         }
     </style>
 </head>
@@ -120,7 +124,7 @@
             videoOverlay.style.display = 'flex'; // Exibe o overlay com o vídeo
             videoElement.play();
 
-            // Evento de quando o vídeo termina
+            // Quando o vídeo termina
             videoElement.onended = () => {
                 videoOverlay.style.display = 'none'; // Esconde o overlay
                 swiper.autoplay.start(); // Retoma o autoplay do carrossel
