--- a/index.html
+++ b/index.html
@@ -31,23 +31,16 @@
             50% { transform: scale(1.1); } /* Zoom suave */
             100% { transform: scale(1); }
         }
-        /* Estilos para sobrepor o vídeo ao carrossel em tela cheia */
-        #video-overlay {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.9); /* Fundo preto semi-transparente */
-            justify-content: center;
-            align-items: center;
-            z-index: 1000;
+        /* Estilos para o vídeo */
+        .swiper-slide video {
+            max-width: 80%;
+            max-height: 80%;
         }
-        #video-overlay video {
-            width: 100%; /* Vídeo em tela cheia */
-            height: 100%;
-            object-fit: cover; /* Cobre a tela completamente */
+        /* Escondendo os controles */
+        .swiper-pagination,
+        .swiper-button-next,
+        .swiper-button-prev {
+            display: none;
         }
     </style>
 </head>
@@ -57,14 +50,6 @@
         <div class="swiper-wrapper">
             <!-- Slides serão adicionados aqui via JavaScript -->
         </div>
-        <div class="swiper-pagination"></div>
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
-    </div>
-
-    <!-- Overlay para exibir vídeo em tela cheia -->
-    <div id="video-overlay">
-        <video controls></video>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
@@ -74,18 +59,8 @@
                 delay: 5000, // Tempo para as imagens
                 disableOnInteraction: false,
             },
-            pagination: {
-                el: '.swiper-pagination',
-                clickable: true,
-            },
-            navigation: {
-                nextEl: '.swiper-button-next',
-                prevEl: '.swiper-button-prev',
-            },
+            loop: true, // Para continuar automaticamente
         });
-
-        const videoOverlay = document.getElementById('video-overlay');
-        const videoElement = videoOverlay.querySelector('video');
 
         const loadContent = async () => {
             const response = await fetch('https://api.github.com/repos/tuesbela/imagenstv/contents/midia?ref=main');
@@ -96,39 +71,15 @@
                 slide.classList.add('swiper-slide');
 
                 if (file.name.endsWith('.mp4')) {
-                    // Adiciona vídeo, mas o vídeo só será exibido na overlay
-                    slide.innerHTML = `<img src="https://dummyimage.com/600x400/000/fff&text=Vídeo">`;
-                    slide.setAttribute('data-video-url', file.download_url);
+                    // Adiciona vídeo, sem som e com autoplay
+                    slide.innerHTML = `<video autoplay muted loop><source src="${file.download_url}" type="video/mp4"></video>`;
                 } else {
+                    // Adiciona imagem
                     slide.innerHTML = `<img src="${file.download_url}" alt="${file.name}">`;
                 }
 
                 swiper.appendSlide(slide);
             });
-
-            // Evento de mudança de slide
-            swiper.on('slideChange', () => {
-                const currentSlide = swiper.slides[swiper.activeIndex];
-                const videoUrl = currentSlide.getAttribute('data-video-url');
-
-                if (videoUrl) {
-                    // Pausa o autoplay e exibe o vídeo em tela cheia
-                    swiper.autoplay.stop();
-                    showVideo(videoUrl);
-                }
-            });
-        };
-
-        const showVideo = (videoUrl) => {
-            videoElement.src = videoUrl;
-            videoOverlay.style.display = 'flex'; // Exibe o overlay com o vídeo
-            videoElement.play();
-
-            // Quando o vídeo termina
-            videoElement.onended = () => {
-                videoOverlay.style.display = 'none'; // Esconde o overlay
-                swiper.autoplay.start(); // Retoma o autoplay do carrossel
-            };
         };
 
         loadContent();
